<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.viper.javaaptilearner.Main2Activity">

    <Button
        android:id="@+id/button4"
        android:layout_width="388dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/trains" />

    <Button
        android:id="@+id/button5"
        android:layout_width="389dp"
        android:layout_height="49dp"
        android:text="@string/ages"
        android:layout_below="@id/button6"
         />

    <Button
        android:id="@+id/button6"
        android:layout_width="377dp"
        android:layout_height="54dp"
        android:text="@string/time_and_work"
        android:layout_below="@id/button4"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="381dp"
        android:layout_height="55dp"
        android:text="@string/averages"
        android:layout_below="@id/button5" />
</RelativeLayout>
